--- a/Rules.ini
+++ b/Rules.ini
@@ -156,21 +156,22 @@ custom_proxy_group=Ⓜ️ 日本故障切换`fallback`日本.*`http://www.gstati
 custom_proxy_group=Ⓜ️ 台湾故障切换`fallback`台湾.*`http://www.gstatic.com/generate_204`300
 custom_proxy_group=Ⓜ️ 美国故障切换`fallback`美国.*`http://www.gstatic.com/generate_204`300
 custom_proxy_group=Ⓜ️ 韩国故障切换`fallback`韩国.*`http://www.gstatic.com/generate_204`300
-custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换
-custom_proxy_group=🧩 微软服务`select`[]DIRECT`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换
-custom_proxy_group=📲 聊天软件`select`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]DIRECT
-custom_proxy_group=📹 YouTube`select`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]DIRECT
-custom_proxy_group=🎥 NETFLIX`select`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]DIRECT
-custom_proxy_group=🔍 谷歌服务`select`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]DIRECT
-custom_proxy_group=🎮 游戏平台`select`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]DIRECT
-custom_proxy_group=⛩ 日韩媒体`select`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]DIRECT
-custom_proxy_group=🌍 国外媒体`select`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]DIRECT
-custom_proxy_group=🌏 港台媒体`select`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]DIRECT
-custom_proxy_group=🇺🇳 国外网站`select`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]DIRECT
-custom_proxy_group=🇨🇳 国内网站`select`[]DIRECT`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换
-custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换
-custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
-custom_proxy_group=⛔ 应用净化`select`[]REJECT`[]DIRECT
+custom_proxy_group=Ⓜ️ 新加坡故障切换`fallback`新加坡.*`http://www.gstatic.com/generate_204`300
+custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]Ⓜ️ 新加坡故障切换
+custom_proxy_group=🧩 微软服务`select`[]DIRECT`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]Ⓜ️ 新加坡故障切换
+custom_proxy_group=📲 聊天软件`select`[]DIRECT`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]Ⓜ️ 新加坡故障切换
+custom_proxy_group=📹 YouTube`select`[]DIRECT`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]Ⓜ️ 新加坡故障切换
+custom_proxy_group=🎥 NETFLIX`select`[]DIRECT`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]Ⓜ️ 新加坡故障切换
+custom_proxy_group=🔍 谷歌服务`select`[]DIRECT`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]Ⓜ️ 新加坡故障切换
+custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]Ⓜ️ 新加坡故障切换
+custom_proxy_group=⛩ 日韩媒体`select`[]DIRECT`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]Ⓜ️ 新加坡故障切换
+custom_proxy_group=🌍 国外媒体`select`[]DIRECT`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]Ⓜ️ 新加坡故障切换
+custom_proxy_group=🌏 港台媒体`select`[]DIRECT`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]Ⓜ️ 新加坡故障切换
+custom_proxy_group=🇺🇳 国外网站`select`[]DIRECT`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]Ⓜ️ 新加坡故障切换
+custom_proxy_group=🇨🇳 国内网站`select`[]DIRECT`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]Ⓜ️ 新加坡故障切换
+custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]Ⓜ️ 新加坡故障切换
+custom_proxy_group=🛑 广告拦截`select`[]DIRECT`[]REJECT
+custom_proxy_group=⛔ 应用净化`select`[]DIRECT`[]REJECT
 
 
 enable_rule_generator=true
