--- a/Rules.ini
+++ b/Rules.ini
@@ -1,4 +1,5 @@
 [custom]
+;根据自己的机场节点修改自https://github.com/flyhigherpi/merlinclash_clash_related/blob/master/Rule_config/ZHANG.ini
 ;不要随意改变关键字，否则会导致出错
 ;常规规则
 
