--- a/Rules.ini
+++ b/Rules.ini
@@ -151,13 +151,13 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 
 custom_proxy_group=🎯 总模式`select`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]DIRECT
-custom_proxy_group=Ⓜ️ 延迟最低`url-test`香港专线\s*[0-9][^NF|原生家庭宽带]`台湾专线\s*[0-9][^NF|原生家庭宽带]`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=Ⓜ️ 香港故障切换`fallback`香港专线\s*[0-9][^NF|原生家庭宽带]`http://www.gstatic.com/generate_204`300
-custom_proxy_group=Ⓜ️ 日本故障切换`fallback`日本专线\s*[0-9][^NF|原生家庭宽带]`http://www.gstatic.com/generate_204`300
-custom_proxy_group=Ⓜ️ 台湾故障切换`fallback`台湾专线\s*[0-9][^NF|原生家庭宽带]`http://www.gstatic.com/generate_204`300
-custom_proxy_group=Ⓜ️ 美国故障切换`fallback`美国专线\s*[0-9][^NF|原生家庭宽带]`http://www.gstatic.com/generate_204`300
-custom_proxy_group=Ⓜ️ 韩国故障切换`fallback`韩国专线\s*[0-9][^NF|原生家庭宽带]`http://www.gstatic.com/generate_204`300
-custom_proxy_group=Ⓜ️ 新加坡故障切换`fallback`新加坡专线\s*[0-9][^NF]`http://www.gstatic.com/generate_204`300
+custom_proxy_group=Ⓜ️ 延迟最低`url-test`香港专线\s*[^0-9]`台湾专线\s*[^0-9]`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=Ⓜ️ 香港故障切换`fallback`香港专线\s*[^0-9]`http://www.gstatic.com/generate_204`300
+custom_proxy_group=Ⓜ️ 日本故障切换`fallback`日本专线\s*[^0-9]`http://www.gstatic.com/generate_204`300
+custom_proxy_group=Ⓜ️ 台湾故障切换`fallback`台湾专线\s*[^0-9]`http://www.gstatic.com/generate_204`300
+custom_proxy_group=Ⓜ️ 美国故障切换`fallback`美国专线\s*[^0-9]`http://www.gstatic.com/generate_204`300
+custom_proxy_group=Ⓜ️ 韩国故障切换`fallback`韩国专线\s*[^0-9]`http://www.gstatic.com/generate_204`300
+custom_proxy_group=Ⓜ️ 新加坡故障切换`fallback`新加坡专线\s*[^0-9]`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🎥 NF`select`.*NF
 custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]Ⓜ️ 新加坡故障切换
 custom_proxy_group=🧩 微软服务`select`[]DIRECT`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]Ⓜ️ 新加坡故障切换
