--- a/Rules.ini
+++ b/Rules.ini
@@ -27,11 +27,9 @@ ruleset=📲 聊天软件,https://raw.githubusercontent.com/flyhigherpi/merlincl
 ruleset=📲 聊天软件,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Ruleset/Line.list
 ruleset=📲 聊天软件,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Ruleset/KakaoTalk.list
 ;游戏平台
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Ruleset/Epic.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Ruleset/Sony.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Ruleset/Steam.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Ruleset/TencentLolm.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Other/Games.list
+ruleset=🎮 Steam,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Ruleset/Steam.list
+ruleset=🎮 Xbox,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Xbox.list
+ruleset=🎮 国外游戏,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Other/Games.list
 ;国外媒体
 ruleset=📹 YouTube,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Ruleset/YouTube.list
 ruleset=🎥 NETFLIX,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Ruleset/Netflix.list
@@ -40,6 +38,7 @@ ruleset=⛩ 日韩媒体,https://raw.githubusercontent.com/flyhigherpi/merlincla
 ruleset=⛩ 日韩媒体,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Ruleset/Japonx.list
 ruleset=⛩ 日韩媒体,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Ruleset/AbemaTV.list
 ruleset=⛩ 日韩媒体,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Ruleset/Pixiv.list
+ruleset=⛩ 日韩媒体,[]DOMAIN-KEYWORD,fanbox
 ruleset=⛩ 日韩媒体,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Ruleset/Dmm.list
 ruleset=🌏 港台媒体,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Ruleset/Bahamut.list
 ruleset=🌏 港台媒体,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Other/TwMedia.list
@@ -151,21 +150,23 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 
 custom_proxy_group=🎯 总模式`select`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]DIRECT
-custom_proxy_group=Ⓜ️ 延迟最低`url-test`香港专线(?!.*(?:1|10)).*$`台湾专线(?!.*(?:1|10)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=Ⓜ️ 香港故障切换`fallback`香港专线(?!.*(?:1|10)).*$`http://www.gstatic.com/generate_204`300
-custom_proxy_group=Ⓜ️ 日本故障切换`fallback`日本专线(?!.*(?:1|10)).*$`http://www.gstatic.com/generate_204`300
-custom_proxy_group=Ⓜ️ 台湾故障切换`fallback`台湾专线(?!.*(?:1|10)).*$`http://www.gstatic.com/generate_204`300
-custom_proxy_group=Ⓜ️ 美国故障切换`fallback`美国专线(?!.*(?:1|10)).*$`http://www.gstatic.com/generate_204`300
+custom_proxy_group=Ⓜ️ 延迟最低`url-test`香港专线(?!.*(?:10)).*$`台湾专线(?!.*(?:10)).*$`http://www.gstatic.com/generate_204`300,800,50
+custom_proxy_group=Ⓜ️ 香港故障切换`fallback`香港专线(?!.*(?:10)).*$`http://www.gstatic.com/generate_204`300
+custom_proxy_group=Ⓜ️ 日本故障切换`fallback`日本专线(?!.*(?:10)).*$`http://www.gstatic.com/generate_204`300
+custom_proxy_group=Ⓜ️ 台湾故障切换`fallback`台湾专线(?!.*(?:10)).*$`http://www.gstatic.com/generate_204`300
+custom_proxy_group=Ⓜ️ 美国故障切换`fallback`美国专线(?!.*(?:10)).*$`http://www.gstatic.com/generate_204`300
 custom_proxy_group=Ⓜ️ 韩国故障切换`fallback`韩国专线(?!.*(?:10)).*$`http://www.gstatic.com/generate_204`300
-custom_proxy_group=Ⓜ️ 新加坡故障切换`fallback`新加坡(?!.*(?:1|10)).*$`http://www.gstatic.com/generate_204`300
+custom_proxy_group=Ⓜ️ 新加坡故障切换`fallback`新加坡(?!.*(?:10)).*$`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🎥 NF`select`.*NF
 custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]Ⓜ️ 新加坡故障切换
 custom_proxy_group=🧩 微软服务`select`[]DIRECT`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]Ⓜ️ 新加坡故障切换
+custom_proxy_group=🎮 Steam`select`[]DIRECT`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]Ⓜ️ 新加坡故障切换
+custom_proxy_group=🎮 Xbox`select`[]DIRECT`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]Ⓜ️ 新加坡故障切换
+custom_proxy_group=🎮 国外游戏`select`[]DIRECT`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]Ⓜ️ 新加坡故障切换
 custom_proxy_group=📲 聊天软件`select`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]Ⓜ️ 新加坡故障切换`[]DIRECT
 custom_proxy_group=📹 YouTube`select`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]Ⓜ️ 新加坡故障切换`[]DIRECT
 custom_proxy_group=🎥 NETFLIX`select`[]🎥 NF
 custom_proxy_group=🔍 谷歌服务`select`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]Ⓜ️ 新加坡故障切换`[]DIRECT
-custom_proxy_group=🎮 游戏平台`select`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]Ⓜ️ 新加坡故障切换`[]DIRECT
 custom_proxy_group=⛩ 日韩媒体`select`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]Ⓜ️ 新加坡故障切换`[]DIRECT
 custom_proxy_group=🌍 国外媒体`select`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]Ⓜ️ 新加坡故障切换`[]DIRECT
 custom_proxy_group=🌏 港台媒体`select`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]Ⓜ️ 新加坡故障切换`[]DIRECT
