--- a/Rules.ini
+++ b/Rules.ini
@@ -149,30 +149,29 @@ ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/flyhigherpi/merl
 ruleset=🐟 漏网之鱼,[]FINAL
 
 
-custom_proxy_group=🎯 总模式`select`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]DIRECT
-custom_proxy_group=Ⓜ️ 延迟最低`url-test`香港专线(?!.*(?:10)).*$`台湾专线(?!.*(?:10)).*$`http://www.gstatic.com/generate_204`300,800,50
-custom_proxy_group=Ⓜ️ 香港故障切换`fallback`香港专线(?!.*(?:10)).*$`http://www.gstatic.com/generate_204`300
-custom_proxy_group=Ⓜ️ 日本故障切换`fallback`日本专线(?!.*(?:10)).*$`http://www.gstatic.com/generate_204`300
-custom_proxy_group=Ⓜ️ 台湾故障切换`fallback`台湾专线(?!.*(?:10)).*$`http://www.gstatic.com/generate_204`300
-custom_proxy_group=Ⓜ️ 美国故障切换`fallback`美国专线(?!.*(?:10)).*$`http://www.gstatic.com/generate_204`300
-custom_proxy_group=Ⓜ️ 韩国故障切换`fallback`韩国专线(?!.*(?:10)).*$`http://www.gstatic.com/generate_204`300
-custom_proxy_group=Ⓜ️ 新加坡故障切换`fallback`新加坡(?!.*(?:10)).*$`http://www.gstatic.com/generate_204`300
+custom_proxy_group=🎯 总模式`select`[]Ⓜ️ 香港延迟最低``[]Ⓜ️ 台湾延迟最低[]Ⓜ️ 香港延迟最低`[]Ⓜ️ 日本延迟最低`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]DIRECT
+custom_proxy_group=Ⓜ️ 香港延迟最低`url-test`香港专线(?!.*(?:10)).*$`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=Ⓜ️ 台湾延迟最低`url-test`台湾专线(?!.*(?:10)).*$`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=Ⓜ️ 日本延迟最低`url-test`日本专线(?!.*(?:10)).*$`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=Ⓜ️ 美国延迟最低`url-test`美国专线(?!.*(?:10)).*$`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=Ⓜ️ 韩国延迟最低`url-test`韩国专线(?!.*(?:10)).*$`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=Ⓜ️ 新加坡延迟最低`url-test`新加坡(?!.*(?:10)).*$`http://www.gstatic.com/generate_204`300,,150
 custom_proxy_group=🎥 NF`select`.*NF
-custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]Ⓜ️ 新加坡故障切换
-custom_proxy_group=🧩 微软服务`select`[]DIRECT`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]Ⓜ️ 新加坡故障切换
-custom_proxy_group=🎮 Steam`select`[]DIRECT`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]Ⓜ️ 新加坡故障切换
-custom_proxy_group=🎮 Xbox`select`[]DIRECT`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]Ⓜ️ 新加坡故障切换
-custom_proxy_group=🎮 国外游戏`select`[]DIRECT`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]Ⓜ️ 新加坡故障切换
-custom_proxy_group=📲 聊天软件`select`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]Ⓜ️ 新加坡故障切换`[]DIRECT
-custom_proxy_group=📹 YouTube`select`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]Ⓜ️ 新加坡故障切换`[]DIRECT
+custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低
+custom_proxy_group=🧩 微软服务`select`[]DIRECT`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低
+custom_proxy_group=🎮 Steam`select`[]DIRECT`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低
+custom_proxy_group=🎮 Xbox`select`[]DIRECT`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低
+custom_proxy_group=🎮 国外游戏`select`[]DIRECT`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低
+custom_proxy_group=📲 聊天软件`select`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低`[]DIRECT
+custom_proxy_group=📹 YouTube`select`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低`[]DIRECT
 custom_proxy_group=🎥 NETFLIX`select`[]🎥 NF
-custom_proxy_group=🔍 谷歌服务`select`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]Ⓜ️ 新加坡故障切换`[]DIRECT
-custom_proxy_group=⛩ 日韩媒体`select`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]Ⓜ️ 新加坡故障切换`[]DIRECT
-custom_proxy_group=🌍 国外媒体`select`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]Ⓜ️ 新加坡故障切换`[]DIRECT
-custom_proxy_group=🌏 港台媒体`select`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]Ⓜ️ 新加坡故障切换`[]DIRECT
-custom_proxy_group=🇺🇳 国外网站`select`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]Ⓜ️ 新加坡故障切换`[]DIRECT
-custom_proxy_group=🇨🇳 国内网站`select`[]DIRECT`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]Ⓜ️ 新加坡故障切换
-custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🎯 总模式`[]Ⓜ️ 延迟最低`[]Ⓜ️ 香港故障切换`[]Ⓜ️ 日本故障切换`[]Ⓜ️ 台湾故障切换`[]Ⓜ️ 美国故障切换`[]Ⓜ️ 韩国故障切换`[]Ⓜ️ 新加坡故障切换
+custom_proxy_group=🔍 谷歌服务`select`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低`[]DIRECT
+custom_proxy_group=⛩ 日韩媒体`select`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低`[]DIRECT
+custom_proxy_group=🌍 国外媒体`select`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低`[]DIRECT
+custom_proxy_group=🌏 港台媒体`select`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低`[]DIRECT
+custom_proxy_group=🇺🇳 国外网站`select`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低`[]DIRECT
+custom_proxy_group=🇨🇳 国内网站`select`[]DIRECT`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低
+custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低
 custom_proxy_group=🛑 广告拦截`select`[]DIRECT`[]REJECT
 custom_proxy_group=⛔ 应用净化`select`[]DIRECT`[]REJECT
 
