--- a/Rules.ini
+++ b/Rules.ini
@@ -149,7 +149,7 @@ ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/flyhigherpi/merl
 ruleset=🐟 漏网之鱼,[]FINAL
 
 
-custom_proxy_group=🎯 总模式`select`[]Ⓜ️ 香港延迟最低``[]Ⓜ️ 台湾延迟最低[]Ⓜ️ 香港延迟最低`[]Ⓜ️ 日本延迟最低`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]DIRECT
+custom_proxy_group=🎯 总模式`select`[]Ⓜ️ 香港延迟最低`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低`[]DIRECT
 custom_proxy_group=Ⓜ️ 香港延迟最低`url-test`香港专线(?!.*(?:10)).*$`http://www.gstatic.com/generate_204`300,,150
 custom_proxy_group=Ⓜ️ 台湾延迟最低`url-test`台湾专线(?!.*(?:10)).*$`http://www.gstatic.com/generate_204`300,,150
 custom_proxy_group=Ⓜ️ 日本延迟最低`url-test`日本专线(?!.*(?:10)).*$`http://www.gstatic.com/generate_204`300,,150
