--- a/Rules.ini
+++ b/Rules.ini
@@ -39,6 +39,7 @@ ruleset=⛩ 日韩媒体,https://raw.githubusercontent.com/flyhigherpi/merlincla
 ruleset=⛩ 日韩媒体,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Ruleset/AbemaTV.list
 ruleset=⛩ 日韩媒体,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Ruleset/Pixiv.list
 ruleset=⛩ 日韩媒体,[]DOMAIN-KEYWORD,fanbox
+ruleset=⛩ 日韩媒体,[]DOMAIN-SUFFIX,pixivision.net
 ruleset=⛩ 日韩媒体,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Ruleset/Dmm.list
 ruleset=🌏 港台媒体,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Ruleset/Bahamut.list
 ruleset=🌏 港台媒体,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Other/TwMedia.list
