--- a/Rules.ini
+++ b/Rules.ini
@@ -157,7 +157,7 @@ custom_proxy_group=Ⓜ️ 日本延迟最低`url-test`日本专线(?!.*(?:10)).*
 custom_proxy_group=Ⓜ️ 美国延迟最低`url-test`美国专线(?!.*(?:10)).*$`http://www.gstatic.com/generate_204`500,,150
 custom_proxy_group=Ⓜ️ 韩国延迟最低`url-test`韩国专线(?!.*(?:10)).*$`http://www.gstatic.com/generate_204`500,,150
 custom_proxy_group=Ⓜ️ 新加坡延迟最低`url-test`新加坡(?!.*(?:10)).*$`http://www.gstatic.com/generate_204`500,,150
-custom_proxy_group=🎥 NETFLIX`select`.*NF
+custom_proxy_group=🎥 NF`select`.*NF
 custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低
 custom_proxy_group=🧩 微软服务`select`[]DIRECT`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低
 custom_proxy_group=🎮 Steam`select`[]DIRECT`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低
