--- a/Rules.ini
+++ b/Rules.ini
@@ -20,6 +20,7 @@ ruleset=🍎 苹果服务,https://raw.githubusercontent.com/flyhigherpi/merlincl
 ruleset=🍎 苹果服务,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Ruleset/AppleTV.list
 ruleset=🧩 微软服务,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Ruleset/Microsoft.list
 ruleset=🧩 微软服务,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Ruleset/OneDrive.list
+ruleset=🧩 BING,DOMAIN-SUFFIX,bing.com
 ;聊天软件
 ruleset=📲 聊天软件,[]DOMAIN-KEYWORD,beetalk
 ruleset=📲 聊天软件,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Ruleset/Telegram.list
