--- a/Rules.ini
+++ b/Rules.ini
@@ -161,6 +161,7 @@ custom_proxy_group=Ⓜ️ 新加坡延迟最低`url-test`新加坡(?!.*(?:NF)).*
 custom_proxy_group=🎥 NF`select`.*NF
 custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低
 custom_proxy_group=🧩 微软服务`select`[]DIRECT`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低
+custom_proxy_group=🧩 BING`select`[]DIRECT`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低
 custom_proxy_group=🎮 Steam`select`[]DIRECT`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低
 custom_proxy_group=🎮 Xbox`select`[]DIRECT`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低
 custom_proxy_group=🎮 国外游戏`select`[]DIRECT`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低
