--- a/Rules.ini
+++ b/Rules.ini
@@ -11,6 +11,7 @@ ruleset=🔍 谷歌服务,[]DOMAIN,dl.google.com
 ruleset=🔍 谷歌服务,[]DOMAIN-SUFFIX,googletraveladservices.com
 ruleset=🚫 涩涩,[]DOMAIN-SUFFIX,myhtebook.com
 ruleset=🚫 涩涩,[]DOMAIN-SUFFIX,longmabookcn.com
+ruleset=🚫 涩涩,[]DOMAIN-SUFFIX,htwhbook.com
 ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/UnBan.list
 ;去广告规则
 ruleset=🛑 广告拦截,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/BanAD.list
