--- a/Rules.ini
+++ b/Rules.ini
@@ -9,9 +9,6 @@ ruleset=DIRECT,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_r
 ruleset=DIRECT,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/LocalAreaNetwork.list
 ruleset=🔍 谷歌服务,[]DOMAIN,dl.google.com
 ruleset=🔍 谷歌服务,[]DOMAIN-SUFFIX,googletraveladservices.com
-ruleset=🚫 涩涩,[]DOMAIN-SUFFIX,myhtebook.com
-ruleset=🚫 涩涩,[]DOMAIN-SUFFIX,longmabookcn.com
-ruleset=🚫 涩涩,[]DOMAIN-SUFFIX,htwhbook.com
 ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/UnBan.list
 ;去广告规则
 ruleset=🛑 广告拦截,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/BanAD.list
@@ -151,18 +148,21 @@ ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/flyhigherpi/merl
 ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/ChinaCompanyIp.list
 ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Other/China.list
 ruleset=🐟 漏网之鱼,[]FINAL
+;涩涩
+ruleset=🚫 涩涩,[]DOMAIN-SUFFIX,myhtebook.com
+ruleset=🚫 涩涩,[]DOMAIN-SUFFIX,longmabookcn.com
+ruleset=🚫 涩涩,[]DOMAIN-SUFFIX,htwhbook.com
 
 
 custom_proxy_group=🎯 总模式`select`[]Ⓜ️ 香港延迟最低`[]♻️ 香港手动切换`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]♻️ 日本手动切换`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低`[]DIRECT
-custom_proxy_group=Ⓜ️ 香港延迟最低`url-test`香港专线(?!.*(?:NF)).*$`http://www.gstatic.com/generate_204`500,,150
-custom_proxy_group=♻️ 香港手动切换`select`香港专线(?!.*(?:NF)).*`
-custom_proxy_group=Ⓜ️ 台湾延迟最低`url-test`台湾专线(?!.*(?:NF)).*$`http://www.gstatic.com/generate_204`500,,150
-custom_proxy_group=Ⓜ️ 日本延迟最低`url-test`日本专线(?!.*(?:NF)).*$`http://www.gstatic.com/generate_204`500,,150
-custom_proxy_group=♻️ 日本手动切换`select`日本专线(?!.*(?:NF)).*`
-custom_proxy_group=Ⓜ️ 美国延迟最低`url-test`美国专线(?!.*(?:NF)).*$`http://www.gstatic.com/generate_204`500,,150
-custom_proxy_group=Ⓜ️ 韩国延迟最低`url-test`韩国专线(?!.*(?:NF)).*$`http://www.gstatic.com/generate_204`500,,150
-custom_proxy_group=Ⓜ️ 新加坡延迟最低`url-test`新加坡(?!.*(?:NF)).*$`http://www.gstatic.com/generate_204`500,,150
-custom_proxy_group=🎥 NF`select`.*NF
+custom_proxy_group=Ⓜ️ 香港延迟最低`url-test`香港专线(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
+custom_proxy_group=♻️ 香港手动切换`select`香港专线.*`
+custom_proxy_group=Ⓜ️ 台湾延迟最低`url-test`台湾专线(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
+custom_proxy_group=Ⓜ️ 日本延迟最低`url-test`日本专线(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
+custom_proxy_group=♻️ 日本手动切换`select`日本专线.*`
+custom_proxy_group=Ⓜ️ 美国延迟最低`url-test`美国专线(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
+custom_proxy_group=Ⓜ️ 韩国延迟最低`url-test`韩国专线(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
+custom_proxy_group=Ⓜ️ 新加坡延迟最低`url-test`新加坡(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
 custom_proxy_group=🍎 苹果服务`select`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]♻️ 香港手动切换`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]♻️ 日本手动切换`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低`[]DIRECT
 custom_proxy_group=🧩 微软服务`select`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]♻️ 香港手动切换`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]♻️ 日本手动切换`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低`[]DIRECT
 custom_proxy_group=🎮 Steam`select`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]♻️ 香港手动切换`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]♻️ 日本手动切换`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低`[]DIRECT
@@ -170,7 +170,7 @@ custom_proxy_group=🎮 Xbox`select`[]🎯 总模式`[]Ⓜ️ 香港延迟最低
 custom_proxy_group=🎮 国外游戏`select`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]♻️ 香港手动切换`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]♻️ 日本手动切换`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低`[]DIRECT
 custom_proxy_group=📲 聊天软件`select`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]♻️ 香港手动切换`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]♻️ 日本手动切换`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低`[]DIRECT
 custom_proxy_group=📹 YouTube`select`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]♻️ 香港手动切换`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]♻️ 日本手动切换`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低`[]DIRECT
-custom_proxy_group=🎥 NETFLIX`select`[]🎥 NF
+custom_proxy_group=🎥 NETFLIX`select`[]♻️ 香港手动切换`[]♻️ 日本手动切换
 custom_proxy_group=🔍 谷歌服务`select`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]♻️ 香港手动切换`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]♻️ 日本手动切换`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低`[]DIRECT
 custom_proxy_group=🚫 涩涩`select`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]♻️ 香港手动切换`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]♻️ 日本手动切换`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低`[]DIRECT
 custom_proxy_group=⛩ 日韩媒体`select`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]♻️ 香港手动切换`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]♻️ 日本手动切换`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低`[]DIRECT
