--- a/Rules.ini
+++ b/Rules.ini
@@ -30,6 +30,7 @@ ruleset=📲 聊天软件,https://raw.githubusercontent.com/flyhigherpi/merlincl
 ruleset=🎮 Steam,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Ruleset/Steam.list
 ruleset=🎮 Xbox,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Xbox.list
 ruleset=🎮 国外游戏,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Other/Games.list
+ruleset=🎮 国外游戏,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Ruleset/Epic.list
 ;国外媒体
 ruleset=📹 YouTube,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Ruleset/YouTube.list
 ruleset=🎥 NETFLIX,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Ruleset/Netflix.list
