--- a/Rules.ini
+++ b/Rules.ini
@@ -157,13 +157,13 @@ ruleset=🚫 涩涩,[]DOMAIN-SUFFIX,htwhbook.com
 
 
 custom_proxy_group=🎯 总模式`select`[]Ⓜ️ 香港延迟最低`[]♻️ 香港手动切换`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]♻️ 日本手动切换`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低`[]DIRECT
-custom_proxy_group=Ⓜ️ 香港延迟最低`url-test`香港专线(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
-custom_proxy_group=♻️ 香港手动切换`select`香港专线.*`
-custom_proxy_group=Ⓜ️ 台湾延迟最低`url-test`台湾专线(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
-custom_proxy_group=Ⓜ️ 日本延迟最低`url-test`日本专线(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
-custom_proxy_group=♻️ 日本手动切换`select`日本专线.*`
-custom_proxy_group=Ⓜ️ 美国延迟最低`url-test`美国专线(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
-custom_proxy_group=Ⓜ️ 韩国延迟最低`url-test`韩国专线(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
+custom_proxy_group=Ⓜ️ 香港延迟最低`url-test`香港(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
+custom_proxy_group=♻️ 香港手动切换`select`香港.*`
+custom_proxy_group=Ⓜ️ 台湾延迟最低`url-test`台湾(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
+custom_proxy_group=Ⓜ️ 日本延迟最低`url-test`日本(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
+custom_proxy_group=♻️ 日本手动切换`select`日本.*`
+custom_proxy_group=Ⓜ️ 美国延迟最低`url-test`美国(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
+custom_proxy_group=Ⓜ️ 韩国延迟最低`url-test`韩国(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
 custom_proxy_group=Ⓜ️ 新加坡延迟最低`url-test`新加坡(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
 custom_proxy_group=🍎 苹果服务`select`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]♻️ 香港手动切换`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]♻️ 日本手动切换`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低`[]DIRECT
 custom_proxy_group=🧩 微软服务`select`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]♻️ 香港手动切换`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]♻️ 日本手动切换`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低`[]DIRECT
