--- a/rule1.ini
+++ b/rule1.ini
@@ -156,7 +156,7 @@ ruleset=🚫 涩涩,[]DOMAIN-SUFFIX,longmabookcn.com
 ruleset=🚫 涩涩,[]DOMAIN-SUFFIX,htwhbook.com
 
 
-custom_proxy_group=🎯 总模式`select`[]DIRECT
+custom_proxy_group=🎯 总模式`select`[]默认节点`[]DIRECT
 custom_proxy_group=🍎 苹果服务`select`[]🎯 总模式`[]DIRECT
 custom_proxy_group=🧩 微软服务`select`[]🎯 总模式`[]DIRECT
 custom_proxy_group=🎮 Steam`select`[]🎯 总模式`[]DIRECT
