--- a/rule1.ini
+++ b/rule1.ini
@@ -164,7 +164,7 @@ custom_proxy_group=🎮 Xbox`select`[]🎯 总模式`[]DIRECT
 custom_proxy_group=🎮 国外游戏`select`[]🎯 总模式`[]DIRECT
 custom_proxy_group=📲 聊天软件`select`[]🎯 总模式`[]DIRECT
 custom_proxy_group=📹 YouTube`select`[]🎯 总模式`[]DIRECT
-custom_proxy_group=🎥 NETFLIX`select`[]♻️ 香港手动切换`[]♻️ 日本手动切换
+custom_proxy_group=🎥 NETFLIX`select`[]🎯 总模式`[]DIRECT
 custom_proxy_group=🎶 Tiktok`select`[]🎯 总模式`[]DIRECT
 custom_proxy_group=🔍 谷歌服务`select`[]🎯 总模式`[]DIRECT
 custom_proxy_group=🚫 涩涩`select`[]🎯 总模式`[]DIRECT
