--- a/Rules.ini
+++ b/Rules.ini
@@ -156,7 +156,7 @@ ruleset=🚫 涩涩,[]DOMAIN-SUFFIX,longmabookcn.com
 ruleset=🚫 涩涩,[]DOMAIN-SUFFIX,htwhbook.com
 
 
-custom_proxy_group=🎯 总模式`select`[]Ⓜ️ 香港延迟最低`[]♻️ 香港手动切换`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]♻️ 日本手动切换`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低`[]DIRECT
+custom_proxy_group=🎯 总模式`select`[]默认节点`[]Ⓜ️ 香港延迟最低`[]♻️ 香港手动切换`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]♻️ 日本手动切换`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低`[]DIRECT
 custom_proxy_group=Ⓜ️ 香港延迟最低`url-test`香港(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
 custom_proxy_group=♻️ 香港手动切换`select`香港.*`
 custom_proxy_group=Ⓜ️ 台湾延迟最低`url-test`台湾(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
