--- a/Rules.ini
+++ b/Rules.ini
@@ -156,33 +156,33 @@ ruleset=🚫 涩涩,[]DOMAIN-SUFFIX,longmabookcn.com
 ruleset=🚫 涩涩,[]DOMAIN-SUFFIX,htwhbook.com
 
 
-custom_proxy_group=🎯 总模式`select`[]默认节点`[]Ⓜ️ 香港延迟最低`[]♻️ 香港手动切换`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]♻️ 日本手动切换`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低`[]DIRECT
-custom_proxy_group=Ⓜ️ 香港延迟最低`url-test`香港(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
-custom_proxy_group=♻️ 香港手动切换`select`香港.*`
-custom_proxy_group=Ⓜ️ 台湾延迟最低`url-test`台湾(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
-custom_proxy_group=Ⓜ️ 日本延迟最低`url-test`日本(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
-custom_proxy_group=♻️ 日本手动切换`select`日本.*`
-custom_proxy_group=Ⓜ️ 美国延迟最低`url-test`美国(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
-custom_proxy_group=Ⓜ️ 韩国延迟最低`url-test`韩国(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
-custom_proxy_group=Ⓜ️ 新加坡延迟最低`url-test`新加坡(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
-custom_proxy_group=🍎 苹果服务`select`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]♻️ 香港手动切换`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]♻️ 日本手动切换`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低`[]DIRECT
-custom_proxy_group=🧩 微软服务`select`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]♻️ 香港手动切换`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]♻️ 日本手动切换`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低`[]DIRECT
-custom_proxy_group=🎮 Steam`select`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]♻️ 香港手动切换`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]♻️ 日本手动切换`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低`[]DIRECT
-custom_proxy_group=🎮 Xbox`select`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]♻️ 香港手动切换`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]♻️ 日本手动切换`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低`[]DIRECT
-custom_proxy_group=🎮 国外游戏`select`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]♻️ 香港手动切换`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]♻️ 日本手动切换`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低`[]DIRECT
-custom_proxy_group=📲 聊天软件`select`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]♻️ 香港手动切换`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]♻️ 日本手动切换`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低`[]DIRECT
-custom_proxy_group=📹 YouTube`select`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]♻️ 香港手动切换`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]♻️ 日本手动切换`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低`[]DIRECT
-custom_proxy_group=🎥 NETFLIX`select`[]♻️ 香港手动切换`[]♻️ 日本手动切换
-custom_proxy_group=🎶 Tiktok`select`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]♻️ 香港手动切换`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]♻️ 日本手动切换`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低`[]DIRECT
-custom_proxy_group=🔍 谷歌服务`select`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]♻️ 香港手动切换`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]♻️ 日本手动切换`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低`[]DIRECT
-custom_proxy_group=🚫 涩涩`select`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]♻️ 香港手动切换`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]♻️ 日本手动切换`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低`[]DIRECT
-custom_proxy_group=⛩ 日韩媒体`select`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]♻️ 香港手动切换`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]♻️ 日本手动切换`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低`[]DIRECT
-custom_proxy_group=🌍 国外媒体`select`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]♻️ 香港手动切换`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]♻️ 日本手动切换`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低`[]DIRECT
-custom_proxy_group=🌏 港台媒体`select`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]♻️ 香港手动切换`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]♻️ 日本手动切换`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低`[]DIRECT
-custom_proxy_group=B B站`select`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]♻️ 香港手动切换`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]♻️ 日本手动切换`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低`[]DIRECT
-custom_proxy_group=🇺🇳 国外网站`select`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]♻️ 香港手动切换`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]♻️ 日本手动切换`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低`[]DIRECT
-custom_proxy_group=🇨🇳 国内网站`select`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]♻️ 香港手动切换`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]♻️ 日本手动切换`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]🎯 总模式`[]Ⓜ️ 香港延迟最低`[]♻️ 香港手动切换`[]Ⓜ️ 台湾延迟最低`[]Ⓜ️ 日本延迟最低`[]♻️ 日本手动切换`[]Ⓜ️ 美国延迟最低`[]Ⓜ️ 韩国延迟最低`[]Ⓜ️ 新加坡延迟最低`[]DIRECT
+custom_proxy_group=🎯 总模式`select`[]默认节点`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]Ⓜ️ 日本延迟`[]♻️ 日本手动`[]Ⓜ️ 美国延迟`[]Ⓜ️ 韩国延迟`[]Ⓜ️ 新加坡延迟`[]DIRECT
+custom_proxy_group=Ⓜ️ 香港延迟`url-test`香港(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
+custom_proxy_group=♻️ 香港手动`select`香港.*`
+custom_proxy_group=Ⓜ️ 台湾延迟`url-test`台湾(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
+custom_proxy_group=Ⓜ️ 日本延迟`url-test`日本(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
+custom_proxy_group=♻️ 日本手动`select`日本.*`
+custom_proxy_group=Ⓜ️ 美国延迟`url-test`美国(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
+custom_proxy_group=Ⓜ️ 韩国延迟`url-test`韩国(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
+custom_proxy_group=Ⓜ️ 新加坡延迟`url-test`新加坡(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
+custom_proxy_group=🍎 苹果服务`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]Ⓜ️ 日本延迟`[]♻️ 日本手动`[]Ⓜ️ 美国延迟`[]Ⓜ️ 韩国延迟`[]Ⓜ️ 新加坡延迟`[]DIRECT
+custom_proxy_group=🧩 微软服务`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]Ⓜ️ 日本延迟`[]♻️ 日本手动`[]Ⓜ️ 美国延迟`[]Ⓜ️ 韩国延迟`[]Ⓜ️ 新加坡延迟`[]DIRECT
+custom_proxy_group=🎮 Steam`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]Ⓜ️ 日本延迟`[]♻️ 日本手动`[]Ⓜ️ 美国延迟`[]Ⓜ️ 韩国延迟`[]Ⓜ️ 新加坡延迟`[]DIRECT
+custom_proxy_group=🎮 Xbox`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]Ⓜ️ 日本延迟`[]♻️ 日本手动`[]Ⓜ️ 美国延迟`[]Ⓜ️ 韩国延迟`[]Ⓜ️ 新加坡延迟`[]DIRECT
+custom_proxy_group=🎮 国外游戏`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]Ⓜ️ 日本延迟`[]♻️ 日本手动`[]Ⓜ️ 美国延迟`[]Ⓜ️ 韩国延迟`[]Ⓜ️ 新加坡延迟`[]DIRECT
+custom_proxy_group=📲 聊天软件`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]Ⓜ️ 日本延迟`[]♻️ 日本手动`[]Ⓜ️ 美国延迟`[]Ⓜ️ 韩国延迟`[]Ⓜ️ 新加坡延迟`[]DIRECT
+custom_proxy_group=📹 YouTube`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]Ⓜ️ 日本延迟`[]♻️ 日本手动`[]Ⓜ️ 美国延迟`[]Ⓜ️ 韩国延迟`[]Ⓜ️ 新加坡延迟`[]DIRECT
+custom_proxy_group=🎥 NETFLIX`select`[]♻️ 香港手动`[]♻️ 日本手动
+custom_proxy_group=🎶 Tiktok`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]Ⓜ️ 日本延迟`[]♻️ 日本手动`[]Ⓜ️ 美国延迟`[]Ⓜ️ 韩国延迟`[]Ⓜ️ 新加坡延迟`[]DIRECT
+custom_proxy_group=🔍 谷歌服务`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]Ⓜ️ 日本延迟`[]♻️ 日本手动`[]Ⓜ️ 美国延迟`[]Ⓜ️ 韩国延迟`[]Ⓜ️ 新加坡延迟`[]DIRECT
+custom_proxy_group=🚫 涩涩`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]Ⓜ️ 日本延迟`[]♻️ 日本手动`[]Ⓜ️ 美国延迟`[]Ⓜ️ 韩国延迟`[]Ⓜ️ 新加坡延迟`[]DIRECT
+custom_proxy_group=⛩ 日韩媒体`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]Ⓜ️ 日本延迟`[]♻️ 日本手动`[]Ⓜ️ 美国延迟`[]Ⓜ️ 韩国延迟`[]Ⓜ️ 新加坡延迟`[]DIRECT
+custom_proxy_group=🌍 国外媒体`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]Ⓜ️ 日本延迟`[]♻️ 日本手动`[]Ⓜ️ 美国延迟`[]Ⓜ️ 韩国延迟`[]Ⓜ️ 新加坡延迟`[]DIRECT
+custom_proxy_group=🌏 港台媒体`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]Ⓜ️ 日本延迟`[]♻️ 日本手动`[]Ⓜ️ 美国延迟`[]Ⓜ️ 韩国延迟`[]Ⓜ️ 新加坡延迟`[]DIRECT
+custom_proxy_group=B B站`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]Ⓜ️ 日本延迟`[]♻️ 日本手动`[]Ⓜ️ 美国延迟`[]Ⓜ️ 韩国延迟`[]Ⓜ️ 新加坡延迟`[]DIRECT
+custom_proxy_group=🇺🇳 国外网站`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]Ⓜ️ 日本延迟`[]♻️ 日本手动`[]Ⓜ️ 美国延迟`[]Ⓜ️ 韩国延迟`[]Ⓜ️ 新加坡延迟`[]DIRECT
+custom_proxy_group=🇨🇳 国内网站`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]Ⓜ️ 日本延迟`[]♻️ 日本手动`[]Ⓜ️ 美国延迟`[]Ⓜ️ 韩国延迟`[]Ⓜ️ 新加坡延迟`[]DIRECT
+custom_proxy_group=🐟 漏网之鱼`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]Ⓜ️ 日本延迟`[]♻️ 日本手动`[]Ⓜ️ 美国延迟`[]Ⓜ️ 韩国延迟`[]Ⓜ️ 新加坡延迟`[]DIRECT
 custom_proxy_group=🛑 广告拦截`select`[]DIRECT`[]REJECT
 custom_proxy_group=⛔ 应用净化`select`[]DIRECT`[]REJECT
 
