--- a/rule1.ini
+++ b/rule1.ini
@@ -7,7 +7,7 @@
 ;直连规则
 ruleset=DIRECT,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Other/Direct.list
 ruleset=DIRECT,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/LocalAreaNetwork.list
-ruleset=AI OpenAI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.yaml
+ruleset=AI OpenAI,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
 ruleset=🔍 谷歌服务,[]DOMAIN,dl.google.com
 ruleset=🔍 谷歌服务,[]DOMAIN-SUFFIX,googletraveladservices.com
 ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/UnBan.list
@@ -155,6 +155,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ruleset=🚫 涩涩,[]DOMAIN-SUFFIX,myhtebook.com
 ruleset=🚫 涩涩,[]DOMAIN-SUFFIX,longmabookcn.com
 ruleset=🚫 涩涩,[]DOMAIN-SUFFIX,htwhbook.com
+ruleset=🚫 涩涩,[]DOMAIN-KEYWORD,xmoon
 
 
 custom_proxy_group=🎯 总模式`select`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]Ⓜ️ 日本延迟`[]♻️ 日本手动`[]Ⓜ️ 美国延迟`[]Ⓜ️ 韩国延迟`[]Ⓜ️ 新加坡延迟`[]1024-wss`[]DIRECT
