--- a/rule1.ini
+++ b/rule1.ini
@@ -158,13 +158,13 @@ ruleset=🚫 涩涩,[]DOMAIN-SUFFIX,htwhbook.com
 ruleset=🚫 涩涩,[]DOMAIN-KEYWORD,xmoon
 
 
-custom_proxy_group=🎯 总模式`select`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]Ⓜ️ 日本延迟`[]♻️ 日本手动`[]Ⓜ️ 美国延迟`[]Ⓜ️ 韩国延迟`[]Ⓜ️ 新加坡延迟`[]1024-wss`[]DIRECT
+custom_proxy_group=🎯 总模式`select`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]Ⓜ️ 日本延迟`[]♻️ 日本手动`[]Ⓜ️ 美国延迟`[]Ⓜ️ 韩国延迟`[]Ⓜ️ 新加坡延迟`[]1024`[]DIRECT
 custom_proxy_group=Ⓜ️ 香港延迟`url-test`香港(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
 custom_proxy_group=♻️ 香港手动`select`香港.*`
 custom_proxy_group=Ⓜ️ 台湾延迟`url-test`台湾(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
 custom_proxy_group=Ⓜ️ 日本延迟`url-test`日本(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
 custom_proxy_group=♻️ 日本手动`select`日本.*`
-custom_proxy_group=1024-wss`select`1024-wss`
+custom_proxy_group=1024`select`1024.*`
 custom_proxy_group=Ⓜ️ 美国延迟`url-test`美国(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
 custom_proxy_group=Ⓜ️ 韩国延迟`url-test`韩国(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
 custom_proxy_group=Ⓜ️ 新加坡延迟`url-test`新加坡(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
