--- a/rule1.ini
+++ b/rule1.ini
@@ -167,7 +167,7 @@ custom_proxy_group=1024`select`1024-wss`
 custom_proxy_group=Ⓜ️ 美国延迟`url-test`美国(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
 custom_proxy_group=Ⓜ️ 韩国延迟`url-test`韩国(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
 custom_proxy_group=Ⓜ️ 新加坡延迟`url-test`新加坡(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
-custom_proxy_group=AI OpenAI`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]Ⓜ️ 日本延迟`[]♻️ 日本手动`[]Ⓜ️ 美国延迟`[]Ⓜ️ 韩国延迟`[]Ⓜ️ 新加坡延迟`[]1024`[]DIRECT
+custom_proxy_group=A OpenAI`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]Ⓜ️ 日本延迟`[]♻️ 日本手动`[]Ⓜ️ 美国延迟`[]Ⓜ️ 韩国延迟`[]Ⓜ️ 新加坡延迟`[]1024`[]DIRECT
 custom_proxy_group=🍎 苹果服务`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]Ⓜ️ 日本延迟`[]♻️ 日本手动`[]Ⓜ️ 美国延迟`[]Ⓜ️ 韩国延迟`[]Ⓜ️ 新加坡延迟`[]1024`[]DIRECT
 custom_proxy_group=🧩 微软服务`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]Ⓜ️ 日本延迟`[]♻️ 日本手动`[]Ⓜ️ 美国延迟`[]Ⓜ️ 韩国延迟`[]Ⓜ️ 新加坡延迟`[]1024`[]DIRECT
 custom_proxy_group=🎮 Steam`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]Ⓜ️ 日本延迟`[]♻️ 日本手动`[]Ⓜ️ 美国延迟`[]Ⓜ️ 韩国延迟`[]Ⓜ️ 新加坡延迟`[]1024`[]DIRECT
