--- a/Rules.ini
+++ b/Rules.ini
@@ -64,8 +64,6 @@ ruleset=🔍 谷歌服务,https://raw.githubusercontent.com/flyhigherpi/merlincl
 ruleset=🔍 谷歌服务,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Ruleset/GoogleCNProxyIP.list
 ruleset=🔍 谷歌服务,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Ruleset/GoogleFCM.list
 ruleset=🔍 谷歌服务,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Ruleset/GoogleCN.list
-ruleset=B B站,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Ruleset/BilibiliHMT.list
-ruleset=B B站,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Ruleset/Bilibili.list
 ruleset=🇺🇳 国外网站,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Other/Proxy.list
 ruleset=🇺🇳 国外网站,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/ProxyGFWlist.list
 
@@ -82,34 +80,29 @@ ruleset=🚫 涩涩,[]DOMAIN-SUFFIX,longmabookcn.com
 ruleset=🚫 涩涩,[]DOMAIN-SUFFIX,htwhbook.com
 
 
-custom_proxy_group=🎯 总模式`select`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]Ⓜ️ 日本延迟`[]♻️ 日本手动`[]Ⓜ️ 美国延迟`[]Ⓜ️ 韩国延迟`[]Ⓜ️ 新加坡延迟`[]DIRECT
+custom_proxy_group=🎯 总模式`select`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]♻️ 日本手动`[]DIRECT
 custom_proxy_group=Ⓜ️ 香港延迟`url-test`香港(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
 custom_proxy_group=♻️ 香港手动`select`香港.*`
 custom_proxy_group=Ⓜ️ 台湾延迟`url-test`台湾(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
-custom_proxy_group=Ⓜ️ 日本延迟`url-test`日本(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
 custom_proxy_group=♻️ 日本手动`select`日本.*`
-custom_proxy_group=Ⓜ️ 美国延迟`url-test`美国(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
 custom_proxy_group=♻️ 美国手动`select`美国.*`
-custom_proxy_group=Ⓜ️ 韩国延迟`url-test`韩国(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
-custom_proxy_group=Ⓜ️ 新加坡延迟`url-test`新加坡(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
-custom_proxy_group=🍎 苹果服务`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]Ⓜ️ 日本延迟`[]♻️ 日本手动`[]Ⓜ️ 美国延迟`[]♻️ 美国手动`[]Ⓜ️ 韩国延迟`[]Ⓜ️ 新加坡延迟`[]DIRECT
-custom_proxy_group=🧩 微软服务`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]Ⓜ️ 日本延迟`[]♻️ 日本手动`[]Ⓜ️ 美国延迟`[]♻️ 美国手动`[]Ⓜ️ 韩国延迟`[]Ⓜ️ 新加坡延迟`[]DIRECT
-custom_proxy_group=🎮 Steam`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]Ⓜ️ 日本延迟`[]♻️ 日本手动`[]Ⓜ️ 美国延迟`[]♻️ 美国手动`[]Ⓜ️ 韩国延迟`[]Ⓜ️ 新加坡延迟`[]DIRECT
-custom_proxy_group=🎮 Xbox`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]Ⓜ️ 日本延迟`[]♻️ 日本手动`[]Ⓜ️ 美国延迟`[]♻️ 美国手动`[]Ⓜ️ 韩国延迟`[]Ⓜ️ 新加坡延迟`[]DIRECT
-custom_proxy_group=🎮 国外游戏`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]Ⓜ️ 日本延迟`[]♻️ 日本手动`[]Ⓜ️ 美国延迟`[]♻️ 美国手动`[]Ⓜ️ 韩国延迟`[]Ⓜ️ 新加坡延迟`[]DIRECT
-custom_proxy_group=📲 聊天软件`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]Ⓜ️ 日本延迟`[]♻️ 日本手动`[]Ⓜ️ 美国延迟`[]♻️ 美国手动`[]Ⓜ️ 韩国延迟`[]Ⓜ️ 新加坡延迟`[]DIRECT
-custom_proxy_group=📹 YouTube`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]Ⓜ️ 日本延迟`[]♻️ 日本手动`[]Ⓜ️ 美国延迟`[]♻️ 美国手动`[]Ⓜ️ 韩国延迟`[]Ⓜ️ 新加坡延迟`[]DIRECT
+custom_proxy_group=🍎 苹果服务`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
+custom_proxy_group=🧩 微软服务`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
+custom_proxy_group=🎮 Steam`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
+custom_proxy_group=🎮 Xbox`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
+custom_proxy_group=🎮 国外游戏`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
+custom_proxy_group=📲 聊天软件`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
+custom_proxy_group=📹 YouTube`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
 custom_proxy_group=🎥 NETFLIX`select`[]♻️ 香港手动`[]♻️ 日本手动
-custom_proxy_group=🎶 Tiktok`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]Ⓜ️ 日本延迟`[]♻️ 日本手动`[]Ⓜ️ 美国延迟`[]♻️ 美国手动`[]Ⓜ️ 韩国延迟`[]Ⓜ️ 新加坡延迟`[]DIRECT
-custom_proxy_group=🔍 谷歌服务`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]Ⓜ️ 日本延迟`[]♻️ 日本手动`[]Ⓜ️ 美国延迟`[]♻️ 美国手动`[]Ⓜ️ 韩国延迟`[]Ⓜ️ 新加坡延迟`[]DIRECT
-custom_proxy_group=🚫 涩涩`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]Ⓜ️ 日本延迟`[]♻️ 日本手动`[]Ⓜ️ 美国延迟`[]♻️ 美国手动`[]Ⓜ️ 韩国延迟`[]Ⓜ️ 新加坡延迟`[]DIRECT
-custom_proxy_group=⛩ 日韩媒体`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]Ⓜ️ 日本延迟`[]♻️ 日本手动`[]Ⓜ️ 美国延迟`[]♻️ 美国手动`[]Ⓜ️ 韩国延迟`[]Ⓜ️ 新加坡延迟`[]DIRECT
-custom_proxy_group=🌍 国外媒体`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]Ⓜ️ 日本延迟`[]♻️ 日本手动`[]Ⓜ️ 美国延迟`[]♻️ 美国手动`[]Ⓜ️ 韩国延迟`[]Ⓜ️ 新加坡延迟`[]DIRECT
-custom_proxy_group=🌏 港台媒体`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]Ⓜ️ 日本延迟`[]♻️ 日本手动`[]Ⓜ️ 美国延迟`[]♻️ 美国手动`[]Ⓜ️ 韩国延迟`[]Ⓜ️ 新加坡延迟`[]DIRECT
-custom_proxy_group=B B站`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]Ⓜ️ 日本延迟`[]♻️ 日本手动`[]Ⓜ️ 美国延迟`[]♻️ 美国手动`[]Ⓜ️ 韩国延迟`[]Ⓜ️ 新加坡延迟`[]DIRECT
-custom_proxy_group=🇺🇳 国外网站`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]Ⓜ️ 日本延迟`[]♻️ 日本手动`[]Ⓜ️ 美国延迟`[]♻️ 美国手动`[]Ⓜ️ 韩国延迟`[]Ⓜ️ 新加坡延迟`[]DIRECT
-custom_proxy_group=🇨🇳 国内网站`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]Ⓜ️ 日本延迟`[]♻️ 日本手动`[]Ⓜ️ 美国延迟`[]♻️ 美国手动`[]Ⓜ️ 韩国延迟`[]Ⓜ️ 新加坡延迟`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]Ⓜ️ 日本延迟`[]♻️ 日本手动`[]Ⓜ️ 美国延迟`[]♻️ 美国手动`[]Ⓜ️ 韩国延迟`[]Ⓜ️ 新加坡延迟`[]DIRECT
+custom_proxy_group=🎶 Tiktok`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
+custom_proxy_group=🔍 谷歌服务`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
+custom_proxy_group=🚫 涩涩`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
+custom_proxy_group=⛩ 日韩媒体`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
+custom_proxy_group=🌍 国外媒体`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
+custom_proxy_group=🌏 港台媒体`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
+custom_proxy_group=🇺🇳 国外网站`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
+custom_proxy_group=🇨🇳 国内网站`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
+custom_proxy_group=🐟 漏网之鱼`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
 custom_proxy_group=🛑 广告拦截`select`[]DIRECT`[]REJECT
 custom_proxy_group=⛔ 应用净化`select`[]DIRECT`[]REJECT
 
