--- a/Rules.ini
+++ b/Rules.ini
@@ -20,6 +20,7 @@ ruleset=🍎 苹果服务,https://raw.githubusercontent.com/flyhigherpi/merlincl
 ruleset=🍎 苹果服务,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Ruleset/AppleTV.list
 ruleset=🧩 微软服务,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Ruleset/Microsoft.list
 ruleset=🧩 微软服务,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Ruleset/OneDrive.list
+ruleset=A OpenAI,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
 ;聊天软件
 ruleset=📲 聊天软件,[]DOMAIN-KEYWORD,beetalk
 ruleset=📲 聊天软件,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Ruleset/Telegram.list
@@ -88,6 +89,7 @@ custom_proxy_group=♻️ 日本手动`select`日本.*`
 custom_proxy_group=♻️ 美国手动`select`美国.*`
 custom_proxy_group=🍎 苹果服务`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
 custom_proxy_group=🧩 微软服务`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
+custom_proxy_group=A OpenAI`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
 custom_proxy_group=🎮 Steam`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
 custom_proxy_group=🎮 Xbox`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
 custom_proxy_group=🎮 国外游戏`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
