--- a/Rules.ini
+++ b/Rules.ini
@@ -80,7 +80,7 @@ ruleset=🚫 涩涩,[]DOMAIN-SUFFIX,longmabookcn.com
 ruleset=🚫 涩涩,[]DOMAIN-SUFFIX,htwhbook.com
 
 
-custom_proxy_group=🎯 总模式`select`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]♻️ 日本手动`[]DIRECT
+custom_proxy_group=🎯 总模式`select`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]♻️ 台湾手动`[]♻️ 日本手动`[]DIRECT
 custom_proxy_group=Ⓜ️ 香港延迟`url-test`香港(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
 custom_proxy_group=♻️ 香港手动`select`香港.*`
 custom_proxy_group=♻️ 台湾手动`select`台湾.*`
