--- a/Rules.ini
+++ b/Rules.ini
@@ -170,7 +170,7 @@ custom_proxy_group=♻️ 美国手动`select`美国.*`
 custom_proxy_group=🍎 苹果服务`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]♻️ 台湾手动`[]♻️ 新加坡手动`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
 custom_proxy_group=🧩 微软服务`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]♻️ 台湾手动`[]♻️ 新加坡手动`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
 custom_proxy_group=🧩 OneDrive`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]♻️ 台湾手动`[]♻️ 新加坡手动`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
-custom_proxy_group=🧩 OpenAI`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]♻️ 台湾手动`[]♻️ 新加坡手动`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
+custom_proxy_group=🤖 OpenAI`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]♻️ 台湾手动`[]♻️ 新加坡手动`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
 custom_proxy_group=🎮 Steam`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]♻️ 台湾手动`[]♻️ 新加坡手动`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
 custom_proxy_group=🎮 Xbox`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]♻️ 台湾手动`[]♻️ 新加坡手动`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
 custom_proxy_group=🎮 国外游戏`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]♻️ 台湾手动`[]♻️ 新加坡手动`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
